<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipes</string>
    <string name="enter_a_key_word">Enter a key word:</string>
    <string name="yum">Yum!</string>
    <string name="bullet_point" translatable="false">►</string>
    <string name="ingredients">Ingredients:</string>
    <string name="for_detailed_recipe_go_to">For detailed recipe go to </string>
    <string name="loading">loading…</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="search_result">Search results for </string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="add_a_new_recipe">Add a new recipe</string>
    <string name="logo_content_description">A brown logo of an app that says Recipes</string>
    <string name="error_logo_description">A black triangle with a transparent exclamation point inside</string>
    <string name="recipe_icon">A picture of a recipe</string>
    <string name="heart">A transparent heart with brown outline</string>
    <string name="brown_heart">A brown heart</string>
    <string name="my_recipes">My recipes</string>
    <string name="dark_theme">Dark theme</string>
    <string name="download_images">Download images</string>
    <string name="theme">Theme</string>
    <string name="images">Images</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_recipe_description">Enter recipe description</string>
    <string name="directions">Directions:</string>
    <string name="round_button_to_add_new_recipe">Round button to add new recipe</string>
    <string name="a_brown_bucket">A brown bucket</string>
    <string name="done">Done</string>
</resources>