<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/preview_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/recipe_icon"
        android:src="@drawable/no_image_logo" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:textSize="20sp"
        tools:text="Recipe name" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/fav"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/heart"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <ImageView
            android:id="@+id/fav_filled"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/brown_heart"
            android:src="@drawable/ic_baseline_favorite_24_filled"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>